tests/baselines/reference/importedModuleAddToGlobal.errors.txt
tests/cases/compiler/importedModuleAddToGlobal.ts(4,16): error TS2654: Import declaration references entity before it is declared.
tests/cases/compiler/importedModuleAddToGlobal.ts(5,16): error TS2654: Import declaration references entity before it is declared.
tests/cases/compiler/importedModuleAddToGlobal.ts(15,23): error TS2503: Cannot find namespace 'b'.


==== tests/cases/compiler/importedModuleAddToGlobal.ts (3 errors) ====
    // Binding for an import statement in a typeref position is being added to the global scope
    // Shouldn't compile b.B is not defined in C
    module A {
        import b = B;
                   ~
!!! error TS2654: Import declaration references entity before it is declared.
        import c = C;
                   ~
!!! error TS2654: Import declaration references entity before it is declared.
    }
    
    module B {
        import a = A;
        export class B { }
    }
    
    module C {
        import a = A;
        function hello(): b.B { return null; }
                          ~
!!! error TS2503: Cannot find namespace 'b'.
    }